--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
     "html_page = requests.get('http://books.toscrape.com/') #Make a get request to retrieve the page\n",
     "soup = BeautifulSoup(html_page.content, 'html.parser') #Pass the page contents to beautiful soup for parsing\n",
     "warning = soup.find('div', class_=\"alert alert-warning\")\n",
-    "book_container = warning.nextSibling.nextSibling"
+    "book_container = warning.nextSibling.nextSibling\n"
    ]
   },
   {
